Refactored isBlank() method (#8)
* added application.properties

* Added AWS S3 functionality, title and locations.

* Update application.properties

* Updated application.properties

* Updated application.properties to remove security flaws

* Added Location for reporting.

* Delete VesselReportingController.class

* Updated VesselReportingController

* Updated VesselReportingController

* Added Notifications on BackEnd

* Added missing classes

* Added more missing files and classes

* Added Helper classes

* Modified dashboard.html

* Refactored isBlank() method

Co-authored-by: jansenmarsonang@gmail.com <you@example.com>
Co-authored-by: Tristan Mahinay <rjt.mahinay@gmail.com>